Fix z-index

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -2,7 +2,6 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 50px 2vw;
-    transform-style: preserve-3d;
     height: 100%;
     max-width: 1200px;
     margin: auto;
@@ -107,6 +106,7 @@
 
 .gslide-image img {
     background-color: transparent !important;
+    z-index: 99999;
 }
 
 .jlpt-listing {
